achieve demand interface of post、put and get
